--- a/Bugify.UI/Views/Task/Index.cshtml
+++ b/Bugify.UI/Views/Task/Index.cshtml
@@ -1,40 +1,17 @@
-﻿@model IEnumerable<Bugify.UI.Models.Dto.TaskDto>
+﻿@model Bugify.UI.Models.TaskBoardPageViewModel
 
-@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
 @{
+    ViewData["Title"] = "Task Board";
 }
 
-<h1 class='mt-3'>Tasks</h1>
-
-<div class="d-flex justify-content-end">
-    <a class ="btn btn-secondary" asp-controller="Task" asp-action="Create"> Add Task</a>
+<div class="d-flex justify-content-between align-items-center mb-3">
+    <h2 class="mb-0">Tasks</h2>
+    <a class="btn btn-primary" asp-controller="Task" asp-action="Create">Create New Task</a>
 </div>
 
-<table class="table table-bordered">
-    <thead>
-    <tr>
-        <th>Title</th>
-        <th>Description</th>
-        <th>DueDate</th>
-        <th>ProgressId</th>
-    </tr>
-    </thead>
-<tbody>
-    @foreach (var task in Model)
+<div class="board">
+    @foreach (var column in Model.Columns)
     {
-        <tr>
-            <td>@task.Title</td>
-            <td>@task.Description</td>
-            <td>@task.DueDate</td>
-            <td>@task.ProgressId</td>
-            <td>@task.ProgressName</td>
-            <td>
-                <a asp-controller="Task" asp-action="Edit" asp-route-id="@task.Id" class="btn btn-light">Edit</a>
-            </td>
-        </tr>
+        @Html.Partial("_TaskColumn", column)
     }
-</tbody>
-
-</table>
+</div>
