--- a/Bugify.UI/Views/Task/Edit.cshtml
+++ b/Bugify.UI/Views/Task/Edit.cshtml
@@ -37,6 +37,9 @@
         <div class="mt-3 d-flex justify-content-between">
             <button type="submit" class="btn btn-primary">Save</button>
             <button type="submit" asp-controller="Task" asp-action="Delete" class="btn btn-danger">Delete</button>
+            <a asp-controller="Task"
+               asp-action="Index"
+               class="btn btn-secondary ms-2">Back</a>
         </div>
     </form>
 }
